Fix issue Felix-853. iPOJO has a new service object creation strategy allowing creating an object per asking instance. Moreover, new strategies can be created (by implementing CreationStrategy). The 'factory' attribute of the 'provides' becomes 'strategy' which makes more sense.
Commit the creation strategy test suite.

Improve the efficiency of Properties and Callbacks.

git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@728056 13f79535-47bb-0310-9956-ffa450edef68